@startuml
skinparam classAttributeIconSize 0
abstract class AbstractProductA {
    +use():void
}
class ProductA1 {
    +use():void
}
class ProductA2 {
    +use():void
}
abstract class AbstractProductB {
    +use():void
}
class ProductB1 {
    +use():void
}
class ProductB2 {
    +use():void
}

abstract class AbstractFactory {
    +createProductA():void
    +createProductB():void
}
class ConcreteFactory1 {
    +createProductA():void
    +createProductB():void
}
class ConcreteFactory2 {
    +createProductA():void
    +createProductB():void
}

AbstractFactory <|.. ConcreteFactory1
AbstractFactory <|.. ConcreteFactory2
AbstractProductA <|.. ProductA1
AbstractProductA <|.. ProductA2
AbstractProductB <|.. ProductB1
AbstractProductB <|.. ProductB2
ConcreteFactory1 ...> ProductA1
ConcreteFactory1 ...> ProductB1
ConcreteFactory2 ...> ProductA2
ConcreteFactory2 ...> ProductB2

'Client --> AbstractFactory
'Client --> AbstractProductA
'Client --> AbstractProductB

@enduml